# chessgineer

./: .gitignore  Cargo.toml  build.rs
examples/: main.rs
src/: calculation.rs  game.rs  lib.rs  messages.rs
