[package]
name = "chessgineer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
futures = "0.3.29"
pin-project = "1.1.3"
tokio = { version = "1.35.0", features = ["process", "io-util"] }
vampirc-uci = { version = "0.11.1", features = ["chess"] }

[dev-dependencies]
color-eyre = "0.6.2"
tokio = { version = "1.35.0", features = ["full"] }
